[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/entities/items/base_templates/base_item/base_item.gd" type="Script" id=1]
[ext_resource path="res://src/scripts/AnimationMachine.gd" type="Script" id=2]
[ext_resource path="res://src/scripts/SoundMachine.gd" type="Script" id=3]
[ext_resource path="res://src/components/pickup_range/PickUpRange.tscn" type="PackedScene" id=4]

[node name="BaseItem" type="Node2D" groups=["ITEM"]]
script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]

[node name="PickUpRange" parent="Position2D" instance=ExtResource( 4 )]

[node name="Visuals" type="Node2D" parent="Position2D"]

[node name="Sprite" type="Sprite" parent="Position2D/Visuals"]

[node name="AnimationMachine" type="Node" parent="Position2D"]
script = ExtResource( 2 )

[node name="SoundMachine" type="Node2D" parent="Position2D"]
script = ExtResource( 3 )
